<resources>
    <string name="app_name">Demo - Blocked Application Error</string>

    <string name="Introducction">This app allow you interact with a common error in eventual connectivity.</string>
    <string name="antipattern">The antipattern <i> <u> Blocked Application </u> </i> will be show here, with its sub-antipatterns</string>
    <string name="completelyBlocked">Completely Blocked</string>
    <string name="partiallyBlocked">Partially Blocked</string>
    <string name="completelyBlockedDescription">The app must be re-started because it does not works after waiting a long time</string>
    <string name="partiallyBlockedDescription">The app is blocked for a long time, but it works after that time</string>
    <string name="live_test">Live Test</string>
    <string name="see_examples">See Examples</string>
</resources>
